# postgres-from-row

./: Cargo.toml
postgres-from-row-derive/: Cargo.toml
postgres-from-row-derive/src/: lib.rs
src/: lib.rs  tuples.rs
tests/: integration.rs
