[package]
name = "postgres-from-row"
description = "Derivable trait that allows converting a postgres row to a struct"
documentation = "https://docs.rs/postgres-from-row"
readme = "README.md"
version = "0.5.3"
authors = ["Remo Pas <remo.pas22@gmail.com>"]
edition = "2021"
repository = "https://github.com/remkop22/postgres-from-row"
homepage = "https://github.com/remkop22/postgres-from-row"
license-file = "LICENSE"
keywords = ["postgres", "postgres-tokio", "postgresql", "from-row", "mapper"]
categories = ["database", "parsing", "data-structures"]

[lib]
doctest = false

[dependencies]
tokio-postgres = { version = "0.7", default-features = false }
postgres-from-row-derive = { path = "postgres-from-row-derive", version = "=0.5.3" }
vec-map = { workspace = true }

[dev-dependencies]
tokio-postgres = { version = "0.7", default-features = false, features = ["with-serde_json-1"] }
