[package]
name = "postgres-from-row-derive"
description = "Internal proc-macro crate for postgres-from-row"
version = "0.5.3"
authors = ["Remo Pas <remo.pas22@gmail.com>"]
edition = "2021"
repository = "https://github.com/remkop22/postgres-from-row"
homepage = "https://github.com/remkop22/postgres-from-row"
license-file = "LICENSE"
keywords = ["postgres", "postgres-tokio", "postgresql", "from-row", "mapper"]
categories = ["database", "parsing", "data-structures"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.28"
syn = "2.0.17"
darling = "0.20.1"
proc-macro2 = "1.0.59"
